[project]
name = "ddp-esphome"
version = "0.8.1"
description = "ESPHome external components for streaming images/video to LVGL displays and LED strips via DDP (Distributed Display Protocol)"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "clang-format>=22.1.4",
    "clang-tidy>=22.1.0.1",
]
